kubernetes-manifests.gke-dev/deployment.yaml
# This Deployment manifest defines:
# - single-replica deployment of the container image, with label "app: go-hello-world"
# - Pod exposes port 8080
# - specify PORT environment variable to the container process
# Syntax reference https://kubernetes.io/docs/concepts/configuration/overview/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orchard
  labels:
    app: orchard
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orchard
  template:
    metadata:
      labels:
        app: orchard
    spec:
      volumes:
        - name: google-cloud-key
          secret:
            secretName: pubsub-key
      containers:
        - name: orchard
          image: gcr.io/loupe-dev/orchard:latest
          ports:
            - name: grpc-server
              containerPort: 50051
          volumeMounts:
            - name: google-cloud-key
              mountPath: /var/secrets/google
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "100m"
